2010-05-28  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (kbd): Alias (kbd "ESC <f6>") to [M-f6].
	(kbd): Alias (kbd "ESC <C-f6>") to [C-M-f6].
	(grep-current-dir): When (grep-current-dir) return empty, prompt.
	(moccur-all-buffers): When (moccur-all-buffers) return empty, prompt.

2010-05-27  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (grep-current-dir): Ignore version control dirs.

	* .emacs: Support portable emacs.

	* init-basic.el (inhibit-startup-message): Disable startup message.

2010-05-26  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el ([f7]): Prompt command when press f7.
	([f7]): Don't prompt command when press f7.

2010-05-25  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (artist-coord-win-to-buf): Add advice to fix bug
	with tabbar-mode.

2010-05-24  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Bind C-S-u and C-S-l to upcase-region and downcase-region.

2010-05-21  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Add autoload for pulse.

	* init-misc.el: Add csharp-mode to support c#.

2010-05-20  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (gud-kill-buffer-hook): Add advice for auto
	enable/disable gud-tooltip-mode.
	(gdb): Add advice for deactivate ecb.

2010-05-19  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (gdb-tooltip-hook): Add for auto enable/disable gud-tooltip-mode.

2010-05-18  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (window-system): In terminal, whitespace-mode
	don't display tabs.
	(cua-keep-region-after-copy): In terminal, don't keep region after copy.

2010-05-17  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Highlight TODO.

	*: Refactor c include dirs.

2010-05-15  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Create imenu menu for makefile-mode.
	("whitespace"): Hack whitespace-post-command-hook for emacs-23.2.
	(whitespace-style): Don't display space-before-tab and space-after-tab.
	: Turn auto-image-file-mode.
